<resources>
    <string name="app_name">Rotobash</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_register">REGISTER</string>
    <string name="txt_startPlaying">START PLAYING</string>
    <string name="txt_email">Email Id</string>
    <string name="txt_pass">Password</string>
    <string name="txt_remember_me">Remember me?</string>
    <string name="txt_forget_pass">Forgot Password</string>
    <string name="txt_or_login">Or Login with</string>
    <string name="txt_logout">Are you sure want to logout?</string>

    <string name="txt_name">Your Name</string>
    <string name="txt_id">Your Email-Id</string>
    <string name="txt_password">Password</string>
    <string name="txt_con_password">Confirm Password</string>
    <string name="txt_playing">Start Playing</string>
    <string name="txt_agree">I agree to Rotobash\'s T&amp;C</string>
    <string name="txt_invite">Invite your friends and earn Roto Cash</string>

    <string name="facebook_app_id">171293183477529</string>
    <string name="fb_login_protocol_scheme">fb171293183477529</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_sidemenu">SidemenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="reset">Reset</string>
    <string name="txt_cricket">CRICKET</string>
    <string name="txt_current">CURRENT</string>
    <string name="txt_active">ACTIVE</string>
    <string name="txt_inactive">INACTIVE</string>
    <string name="txt_alls">ALL</string>
    <string name="txt_coming">UPCOMING</string>
    <string name="txt_create_contest">CREATE A PRIVATE CONTEST</string>
    <string name="txt_all">All Series</string>
    <string name="title_activity_matchList">MatchListActivity</string>
    <string name="txt_kkr_vs_rcb">KKR VS RCB</string>
    <string name="txt_time">12:34:56</string>
    <string name="txt_select_league">Select League</string>
    <string name="txt_select_pay">Select Pay</string>
    <string name="active">ACTIVE</string>
    <string name="inActive">INACTIVE</string>
    <string name="txt_total_prize">Total Prize</string>
    <string name="txt_max_prize">Max Prize</string>
    <string name="txt_pay">Pay</string>
    <string name="txt_league">League</string>
    <string name="teams">16/20 Teams</string>
    <string name="txt_winners">3000 Winners</string>
    <string name="txt_join">Join</string>
    <string name="Rs">\u20B9</string>
    <string name="txt_match_name">Match Name</string>
    <string name="txt_match">MATCH</string>
    <string name="txt_tournament">TOURNAMENT</string>
    <string name="txt_left">TIME LEFT</string>

    <!-- Select team activity -->
    <string name="txt_select_team_heading">Select Your Team</string>
    <string name="txt_next">Next</string>
    <string name="txt_credits_left">Credits Left</string>
    <string name="txt_player_selected">Players Selected</string>
    <string name="txt_possible_combinations">Possible Combinations</string>
    <string name="txt_selection_criteria">Selection Criteria</string>
    <string name="ranks">Ranks</string>
    <string name="no_of_winners">No. Of Winners</string>
    <string name="prize">Prize</string>
    <string name="rank_not_available">Ranks not available</string>
    <string name="wicket_keeper">wicket keeper</string>
    <string name="all_rounder">all-rounder</string>
    <string name="bowler">bowler</string>
    <string name="batsmen">batsmen</string>
    <string name="team">team</string>
    <string name="bat">bat</string>
    <string name="bowl">bowl</string>
    <string name="ar">ar</string>
    <string name="wk">wk</string>
    <string name="sub">sub</string>
    <string name="max">max</string>
    <string name="min">min</string>

</resources>
