<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <com.tech.rotobash.utils.TextFontsRegular
            android:id="@+id/tvTitle"
            android:layout_width="360dp"
            android:layout_height="47dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/change_pass"
            android:textColor="@color/color_black"
            android:textSize="@dimen/large_text"
            app:layout_constraintBottom_toTopOf="@+id/etOldPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.tech.rotobash.utils.EditTextFontsRegular
            android:id="@+id/etOldPass"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg_darkline"
            android:hint="@string/old_pass"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin_ten"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <com.tech.rotobash.utils.ButtonFontBold
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_bg_blue"
            android:text="@string/reset"
            android:textColor="@color/color_white"
            android:textSize="@dimen/large_mid_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNewPass" />

        <com.tech.rotobash.utils.ButtonFontBold
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg_grey"
            android:text="CANCEL"
            android:textColor="@color/color_white"
            android:textSize="@dimen/large_mid_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

        <com.tech.rotobash.utils.EditTextFontsRegular
            android:id="@+id/etNewPass"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg_darkline"
            android:hint="@string/new_pass"
            android:padding="@dimen/margin_ten"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvErrorOldPassword" />

        <TextView
            android:id="@+id/tvErrorOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/color_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etOldPass" />

    </android.support.constraint.ConstraintLayout>
</layout>